Added Phaser game framework

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Phaser import -->
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser-matter-collision-plugin"></script>
     <title>Document</title>
 </head>
 
 <body>
     <h1>Moin!</h1>
+
+    <!-- Game -->
+    <div id="game"></div>
+    <script type="module" src="js/game.js"></script>
 </body>
 
 </html>
