--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Game -->
     <div id="game"></div>
     <script type="module" src="js/game.js"></script>
+    <script type="module" src="js/MainScene.js"></script>
 </body>
 
 </html>
