Added a instruction scene

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-    <h1>Moin!</h1>
-
+    <div style="font-family:mainfont; visibility:hidden; line-height: 0px;">.</div>
     <!-- Game -->
     <div id="game"></div>
     <script type="module" src="js/game.js"></script>
